[tool.poetry]
name = "gunn-coin"
version = "0.1.0"
description = ""
authors = ["Dylan Lu <dylanelu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
