[tool.poetry]
name = "gunn-coin"
version = "0.1.0"
description = ""
authors = ["Dylan Lu <dylanelu@gmail.com>"]
packages = [
    { include = "miner.py" },
    { include = "node.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
aiohttp = "^3.8.1"
structlog = "^21.5.0"
PyNaCl = "^1.5.0"
colorama = "^0.4.4"
marshmallow = "^3.14.1"
marshmallow-oneofschema = "^3.0.1"
qrcode = "^7.3.1"
gevent = "^21.12.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
